# ML-Framework-lab

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  download_testpic.py  export.py  main.py  model.onnx.data  model.onnx.dvc  pyproject.toml  streamlit_app.py  verify_onnx.py
.dvc/: config
ML_lab/: Check.py  check_env.py
configs/: exp1.yaml
data/: .gitignore  raw.dvc
pages/: Predict.py
src/: EDA_Experiments.ipynb  constants.py  dataset.py  model.py  train.py
