[project]
name = "ml-ramverk"
version = "0.1.0"
description = "Machine learning framework for ML experiments"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "pandas>=3.0.0",
  "ipykernel>=7.1.0",
  "jupyter",
  "scikit-learn>=1.8.0",
  "torch",
  "dvc[s3]>=3.66.1",
  "torchvision>=0.25.0",
  "matplotlib>=3.10.8",
  "onnxruntime>=1.24.2",
  "pytorch-lightning>=2.6.1",
]

